# sh_runner

./: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  README.md  index.html  package.json  pnpm-lock.yaml  setup.sh  tailwind.config.js  vite.config.ts
.github/workflows/: build-macos-dmg.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  global-shortcut.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActionBar.tsx  CommandPalette.tsx  Header.tsx  LogsModal.tsx  ScriptConfigModal.tsx  ScriptItem.tsx  ScriptList.tsx  SettingsModal.tsx  Toast.tsx
src/hooks/: useElapsedTimer.ts  useStore.ts
src/lib/: scripts.ts
src/types/: index.ts
